--- a/index.html
+++ b/index.html
@@ -4,17 +4,11 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="style.css">
 	<title>Canvas</title>
 </head>
 
 <body>
-
-
-
-	<canvas id="canvas" width="400" height="400"></canvas>
-	<br>
-	<input type="color" id="color">
-	<input type="range" id="range" min="1" max="10">
 
 	<div class="container">
 		<h1>Accordion</h1>
@@ -47,7 +41,7 @@
 		</div>
 	</div>
 
-	<script src="script.js"></script>
+	<script src="accord.js"></script>
 </body>
 
 </html>
